@@ -1,3 +1,4 @@
+* Run trigger in the queue
 * Do not copy Binary content with file_id
 * Replace memoize with functools.lru_cache
 * Add support for Python 3.8
